HDS-6295 Fix Dropdown list item badge alignment

--- a/packages/components/src/styles/components/dropdown.scss
+++ b/packages/components/src/styles/components/dropdown.scss
@@ -454,6 +454,10 @@ $hds-dropdown-toggle-border-radius: $hds-button-border-radius;
   display: block;
   flex: 1;
   text-align: left; // the button element was centering text
+
+  .hds-badge {
+    vertical-align: bottom; // align badge to the text baseline
+  }
 }
 
 .hds-dropdown-list-item--color-action {
